--- a/page_3.html
+++ b/page_3.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE-edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 2</title>
     <link rel="stylesheet" href="CSS/style_2.css">
@@ -14,7 +15,7 @@
             <img id="logo" src="IMG/YOURLOGO_1.svg" onmouseover="this.src='IMG/YOURLOGO_2.svg'" 
             onmouseout="this.src='IMG/YOURLOGO_1.svg'" alt="logotype">
             <ul class="top">
-                <li id="home" >HOME</li>
+                <li id="home" > <a href="page_2.html">HOME</a> </li>
                 <li>ITEM 1</li>
                 <li>ITEM 2</li>
                 <li>ITEM 3</li>
