--- a/page_3.html
+++ b/page_3.html
@@ -39,7 +39,7 @@
                     <h2>
                         AND A CLEAN PAGE 
                     </h2>
-                    <hr>
+                    <hr class="row">
                     <p class="topic_text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ornare libero mi, 
                         eget pharetra nibh lacinia at. Interdum et malesuada fames ac ante ipsum primis in faucibus.             
